Add confusion matrix function

--- a/3-simple-CNN-model-acrima-training.ipynb
+++ b/3-simple-CNN-model-acrima-training.ipynb
@@ -12,8 +12,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
@@ -47,7 +47,8 @@
         "import numpy as np\n",
         "import tensorflow as tf\n",
         "import matplotlib.pyplot as plt\n",
-        "from utils import split_data, image_generators, visualize_results, get_testing_data"
+        "from utils import split_data, image_generators, visualize_results, get_testing_data, \\\n",
+        "    draw_conf_matrix"
       ]
     },
     {
@@ -135,8 +136,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Found 563 images belonging to 2 classes.\n",
             "Found 142 images belonging to 2 classes.\n"
@@ -1786,8 +1787,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Epoch 1/18\n",
             "29/29 [==============================] - 338s 12s/step - loss: 1.1223 - accuracy: 0.7087 - val_loss: 0.4290 - val_accuracy: 0.8028\n",
@@ -1850,6 +1851,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "LMXJw1j3FSOJ"
+      },
+      "outputs": [],
       "source": [
         "# Save trained model architecture and weights\n",
         "json_model = model.to_json()\n",
@@ -1857,12 +1863,7 @@
         "    outfile.write(json_model)\n",
         "\n",
         "model.save_weights(\"simple_model_weights.h5\")"
-      ],
-      "metadata": {
-        "id": "LMXJw1j3FSOJ"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -1988,27 +1989,17 @@
       ],
       "source": [
         "# Visualize results\n",
-        "import seaborn as sns\n",
-        "from sklearn.metrics import confusion_matrix\n",
-        "\n",
-        "cm = confusion_matrix(y_test, y_test_pred)\n",
-        "sns.heatmap(cm, annot=True, fmt='g', xticklabels=[\"glaucoma\", \"normal\"], \\\n",
-        "    yticklabels=[\"glaucoma\", \"normal\"])\n",
-        "plt.show()\n",
-        "glaucoma = round(cm[0][0] * 100 / sum(cm[0]), 2)\n",
-        "print(\"Glaucoma prediction accuracy:\", glaucoma, \"%\")\n",
-        "normal = round(cm[1][1] * 100 / sum(cm[1]), 2)  \n",
-        "print(\"Normal prediction accuracy:\", normal, \"%\")"
+        "draw_conf_matrix(y_test, y_test_pred)"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "The very low accuracy in glaucoma detection is likely due to the differences in the training & testing images. For example, the testing dataset images have a black background which potentially skews the results of the model. Similarly, we notice that the ACRIMA dataset has the images centred around the optic nerve head / optic disc (the circle in the middle). Therefore, we'll crop the images so they more closely resemble our training dataset."
-      ],
       "metadata": {
         "id": "B_OMvf0NLAUM"
-      }
+      },
+      "source": [
+        "The very low accuracy in glaucoma detection is likely due to the differences in the training & testing images. For example, the testing dataset images have a black background which potentially skews the results of the model. Similarly, we notice that the ACRIMA dataset has the images centred around the optic nerve head / optic disc (the circle in the middle). Therefore, we'll crop the images so they more closely resemble our training dataset."
+      ]
     },
     {
       "cell_type": "markdown",
