Adapt image cropping code

--- a/scripts/2-data-splitting-and-augmentation.ipynb
+++ b/scripts/2-data-splitting-and-augmentation.ipynb
@@ -216,22 +216,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "JQ3qUKCP__m4",
-        "outputId": "affa166f-c0fd-4ef2-fbd1-d5babb9a0b6b",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "JQ3qUKCP__m4"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -245,7 +233,7 @@
       "metadata": {
         "id": "0ch6TCY7AQzL"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,70 +255,83 @@
         "from tensorflow.python.keras.preprocessing import image\n",
         "\n",
         "from cropping_scripts import Model_DiscSeg as DiscModel\n",
-        "from cropping_scripts.mnet_utils import BW_img, disc_crop, mk_dir, files_with_ext\n",
-        "\n",
-        "disc_list = [400, 500, 600, 700, 800]\n",
-        "DiscROI_size = 800\n",
-        "DiscSeg_size = 640\n",
-        "CDRSeg_size = 400\n",
-        "\n",
-        "data_type = '.png'\n",
-        "parent_dir = \"drive/MyDrive\"\n",
-        "data_img_path = path.abspath(path.join(parent_dir, 'drishti_images'))\n",
-        "label_img_path = path.abspath(path.join(parent_dir, 'drishti_labels'))\n",
-        "\n",
-        "data_save_path = mk_dir(path.join(parent_dir, 'training_crop', 'data'))\n",
-        "label_save_path = mk_dir(path.join(parent_dir, 'training_crop', 'label'))\n",
-        "\n",
-        "file_test_list = files_with_ext(data_img_path, data_type)\n",
-        "\n",
-        "DiscSeg_model = DiscModel.DeepModel(size_set=DiscSeg_size)\n",
-        "DiscSeg_model.load_weights(path.join(parent_dir, 'deep_model', 'Model_DiscSeg_ORIGA.h5'))\n",
-        "\n",
-        "Disc_flat = None\n",
-        "\n",
-        "for lineIdx, temp_txt in enumerate(file_test_list):\n",
-        "    print('Processing Img {idx}: {temp_txt}'.format(idx=lineIdx + 1, temp_txt=temp_txt))\n",
-        "\n",
-        "    # load image\n",
-        "    org_img = np.asarray(image.load_img(path.join(data_img_path, temp_txt)))\n",
-        "\n",
-        "    # load label\n",
-        "    org_label = np.asarray(image.load_img(path.join(label_img_path, temp_txt[:-4] + '.png')))[:, :, 0]\n",
-        "    new_label = np.zeros(np.shape(org_label) + (3,), dtype=np.uint8)\n",
-        "    new_label[org_label < 200, 0] = 255\n",
-        "    new_label[org_label < 100, 1] = 255\n",
-        "\n",
-        "    # Disc region detection by U-Net\n",
-        "    temp_img = resize(org_img, (DiscSeg_size, DiscSeg_size, 3)) * 255\n",
-        "    temp_img = np.reshape(temp_img, (1,) + temp_img.shape)\n",
-        "    disc_map = DiscSeg_model.predict([temp_img])\n",
-        "\n",
-        "    disc_map = BW_img(np.reshape(disc_map, (DiscSeg_size, DiscSeg_size)), 0.5)\n",
-        "\n",
-        "    regions = regionprops(label(disc_map))\n",
-        "    C_x = int(regions[0].centroid[0] * org_img.shape[0] / DiscSeg_size)\n",
-        "    C_y = int(regions[0].centroid[1] * org_img.shape[1] / DiscSeg_size)\n",
-        "\n",
-        "    for disc_idx, DiscROI_size in enumerate(disc_list):\n",
-        "        disc_region, err_coord, crop_coord = disc_crop(org_img, DiscROI_size, C_x, C_y)\n",
-        "        label_region, _, _ = disc_crop(new_label, DiscROI_size, C_x, C_y)\n",
-        "        Disc_flat = rotate(cv2.linearPolar(disc_region, (DiscROI_size / 2, DiscROI_size / 2), DiscROI_size / 2,\n",
-        "                                           cv2.INTER_NEAREST + cv2.WARP_FILL_OUTLIERS), -90)\n",
-        "        Label_flat = rotate(cv2.linearPolar(label_region, (DiscROI_size / 2, DiscROI_size / 2), DiscROI_size / 2,\n",
-        "                                            cv2.INTER_NEAREST + cv2.WARP_FILL_OUTLIERS), -90)\n",
-        "\n",
-        "        disc_result = Image.fromarray((Disc_flat * 255).astype(np.uint8))\n",
-        "        filename = '{}_{}.png'.format(temp_txt[:-4], DiscROI_size)\n",
-        "        disc_result.save(path.join(data_save_path, filename))\n",
-        "        label_result = Image.fromarray((Label_flat * 255).astype(np.uint8))\n",
-        "        label_result.save(path.join(label_save_path, filename))\n",
-        "\n",
-        "plt.imshow(Disc_flat)\n",
-        "plt.show()"
+        "from cropping_scripts.mnet_utils import BW_img, disc_crop, mk_dir, files_with_ext"
       ],
       "metadata": {
         "id": "_dooasWg-3KG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data_type = '.png'\n",
+        "parent_dir = \"drive/MyDrive\"\n",
+        "g_data_img_path = path.abspath(path.join(parent_dir, 'kaggle_dataset', 'glaucoma'))\n",
+        "g_data_save_path = mk_dir(path.join(parent_dir, 'training_crop', 'glaucoma'))\n",
+        "n_data_img_path = path.abspath(path.join(parent_dir, 'kaggle_dataset', 'normal'))\n",
+        "n_data_save_path = mk_dir(path.join(parent_dir, 'training_crop', 'normal'))"
+      ],
+      "metadata": {
+        "id": "-_9guXIec1Tb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adapt the optic disc segmentation code to current problem\n",
+        "def crop_images(parent_dir, data_img_path, data_save_path, data_type='.png', disc_list=[400, 500, 600, 700, 800], \\\n",
+        "                DiscROI_size=800, DiscSeg_size=640, CDRSeg_size=400):\n",
+        "  \n",
+        "  file_test_list = files_with_ext(data_img_path, data_type)\n",
+        "\n",
+        "  # Load segmentation model\n",
+        "  DiscSeg_model = DiscModel.DeepModel(size_set=DiscSeg_size)\n",
+        "  DiscSeg_model.load_weights(path.join(parent_dir, 'deep_model', 'Model_DiscSeg_ORIGA.h5'))\n",
+        "\n",
+        "  for lineIdx, temp_txt in enumerate(file_test_list):\n",
+        "\n",
+        "      # Show preprocessing progress\n",
+        "      print('Processing Img {idx}: {temp_txt}'.format(idx=lineIdx + 1, temp_txt=temp_txt))\n",
+        "\n",
+        "      # Load image\n",
+        "      org_img = np.asarray(image.load_img(path.join(data_img_path, temp_txt)))\n",
+        "\n",
+        "      # Disc region detection by U-Net\n",
+        "      temp_img = resize(org_img, (DiscSeg_size, DiscSeg_size, 3)) * 255\n",
+        "      temp_img = np.reshape(temp_img, (1,) + temp_img.shape)\n",
+        "      disc_map = DiscSeg_model.predict([temp_img])\n",
+        "      disc_map = BW_img(np.reshape(disc_map, (DiscSeg_size, DiscSeg_size)), 0.5)\n",
+        "      regions = regionprops(label(disc_map))\n",
+        "      C_x = int(regions[0].centroid[0] * org_img.shape[0] / DiscSeg_size)\n",
+        "      C_y = int(regions[0].centroid[1] * org_img.shape[1] / DiscSeg_size)\n",
+        "\n",
+        "      for disc_idx, DiscROI_size in enumerate(disc_list):\n",
+        "          disc_region, err_coord, crop_coord = disc_crop(org_img, DiscROI_size, C_x, C_y)\n",
+        "          disc_result = Image.fromarray((disc_region).astype(np.uint8))\n",
+        "          filename = '{}_{}.png'.format(temp_txt[:-4], DiscROI_size)\n",
+        "          disc_result.save(path.join(data_save_path, filename))\n",
+        "\n",
+        "  plt.imshow(disc_result)\n",
+        "  plt.show()"
+      ],
+      "metadata": {
+        "id": "0f811ZUGcvuW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "crop_images(parent_dir, g_data_image_path, g_data_save_path, disc_list=[600])\n",
+        "crop_images(parent_dir, n_data_image_path, n_data_save_path, disc_list=[600])"
+      ],
+      "metadata": {
+        "id": "X735jtB0dnVj"
       },
       "execution_count": null,
       "outputs": []
