--- a/scripts/2-data-splitting-and-augmentation.ipynb
+++ b/scripts/2-data-splitting-and-augmentation.ipynb
@@ -6,9 +6,9 @@
         "id": "CmVTV_tG7ehb"
       },
       "source": [
-        "### 2. Data splitting & augmentation\n",
+        "### 2. Data splitting, augmentation, and cropping\n",
         "\n",
-        "Before we train any ML model on our data (ACRIMA dataset), we will first split the data into training & validation sets which can later be augmented using keras' `ImageDataGenerator` method."
+        "Before we train any ML model on our data (ACRIMA dataset), we will first split the data into training & validation sets which can later be augmented using keras' `ImageDataGenerator` method. Also, we will preprocess the images from the Kaggle dataset before running the evaluation of the models."
       ]
     },
     {
@@ -217,21 +217,6 @@
       ],
       "metadata": {
         "id": "JQ3qUKCP__m4"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import os\n",
-        "\n",
-        "kaggle_dir = \"drive/MyDrive/kaggle_dataset\"\n",
-        "g_kaggle_dataset = os.path.join(kaggle_dir, \"glaucoma\")\n",
-        "n_kaggle_dataset = os.path.join(kaggle_dir, \"normal\")"
-      ],
-      "metadata": {
-        "id": "0ch6TCY7AQzL"
       },
       "execution_count": null,
       "outputs": []
