--- a/scripts/3-simple-CNN-model-acrima-training.ipynb
+++ b/scripts/3-simple-CNN-model-acrima-training.ipynb
@@ -30,7 +30,7 @@
         "id": "XdLC1p2fzAbe"
       },
       "source": [
-        "## 3. Simple CNN models\n",
+        "## 3. Simple CNN model training & tuning\n",
         "\n",
         "In this notebook, we'll deploy and analyze the results of simple CNNs on our training, validation & testing data."
       ]
@@ -46,8 +46,7 @@
         "import os\n",
         "import numpy as np\n",
         "import tensorflow as tf\n",
-        "import matplotlib.pyplot as plt\n",
-        "from utils import split_data, image_generators, visualize_results, get_testing_data, \\\n",
+        "from utils import image_generators, visualize_results, get_testing_data, \\\n",
         "    draw_conf_matrix"
       ]
     },
@@ -95,33 +94,6 @@
       },
       "source": [
         "First off, we'll define the image size for the training and validation data as (178, 178), as it's the smallest resolution from the whole dataset. Secondly, we'll do a 80-20 train-validation split."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "OlHjVXYKzAbs"
-      },
-      "outputs": [],
-      "source": [
-        "# For running on local machine\n",
-        "# split_size = 0.8\n",
-        "#\n",
-        "# Save directory paths\n",
-        "# acrima_dir = os.path.join(os.getcwd(), \"data/acrima-dataset\")\n",
-        "# glaucoma_dir = os.path.join(acrima_dir, \"glaucoma\")\n",
-        "# normal_dir = os.path.join(acrima_dir, \"normal\")\n",
-        "# train_dir = os.path.join(acrima_dir, \"train\")\n",
-        "# val_dir = os.path.join(acrima_dir, \"validation\")\n",
-        "# g_train_dir = os.path.join(train_dir, \"glaucoma\")\n",
-        "# g_val_dir = os.path.join(val_dir, \"glaucoma\")\n",
-        "# n_train_dir = os.path.join(train_dir, \"normal\")\n",
-        "# n_val_dir = os.path.join(val_dir, \"normal\")\n",
-        "# \n",
-        "# Train-validation split data\n",
-        "# split_data(glaucoma_dir, g_train_dir, g_val_dir, split_size)\n",
-        "# split_data(normal_dir, n_train_dir, n_val_dir, split_size)"
       ]
     },
     {
@@ -1998,16 +1970,18 @@
         "id": "B_OMvf0NLAUM"
       },
       "source": [
-        "The very low accuracy in glaucoma detection is likely due to the differences in the training & testing images. For example, the testing dataset images have a black background which potentially skews the results of the model. Similarly, we notice that the ACRIMA dataset has the images centred around the optic nerve head / optic disc (the circle in the middle). Therefore, we'll crop the images so they more closely resemble our training dataset."
+        "The very low accuracy in glaucoma detection is likely due to the fact that we've tested our model on the full-sized images in the Kaggle dataset, which are very different from the training images. The latter have been previously cropped[$^{[1]}$](https://biomedical-engineering-online.biomedcentral.com/articles/10.1186/s12938-019-0649-y), so they do not have the majority of the black background that the Kaggle images have and they are centred around the optic nerve head / optic disc. \n",
+        "\n",
+        "Therefore, we'll crop the images so they more closely resemble our training dataset. The model evaluation on the cropped images can be found in the [ACRIMA models evaluation](https://github.com/sabinagio/do-you-see-what-AI-see/blob/master/scripts/4-acrima-models-evaluation.ipynb) notebook."
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "mWL5hv4OnFYg"
-      },
+      "metadata": {},
       "source": [
-        "#### 3.4. Conclusions"
+        "### 3.4. References\n",
+        "\n",
+        "[1] Diaz-Pinto, A., Morales, S., Naranjo, V. et al. CNNs for automatic glaucoma assessment using fundus images: an extensive validation. BioMed Eng OnLine 18, 29 (2019). https://doi.org/10.1186/s12938-019-0649-y"
       ]
     }
   ],
