--- a/scripts/4-acrima-models-evaluation.ipynb
+++ b/scripts/4-acrima-models-evaluation.ipynb
@@ -2,26 +2,26 @@
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
+      "execution_count": 1,
       "metadata": {
-        "id": "JZrKJM9MJ9u_",
-        "outputId": "05904f72-86d1-4005-9b2f-3299ee4b34bb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JZrKJM9MJ9u_",
+        "outputId": "05904f72-86d1-4005-9b2f-3299ee4b34bb"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Mounted at /content/drive\n"
           ]
         }
+      ],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ]
     },
     {
@@ -30,46 +30,32 @@
         "id": "9Lv7vdPLJ3TP"
       },
       "source": [
-        "### 4. ACRIMA models evaluation\n",
+        "### 4. ML models evaluation\n",
         "\n",
-        "The researchers working on the ACRIMA data prediction model also included their models along with the dataset. Therefore, we'll try to use their models on the Kaggle dataset and see how they're performing compared to the simple CNN models in the previous notebook.\n",
+        "The researchers working on the ACRIMA data prediction model also included their models along with the dataset. Therefore, we'll try to use their models on the Kaggle dataset and see how they're performing compared to the simple CNN model trained on the same dataset in the previous notebook.\n",
         "\n",
         "Each model is saved in a JSON file, with the algorithm weights being saved in a h5 file (Hierarchical Data Format). The files can be found [here](https://drive.google.com/drive/folders/133uwNfPLYQs2fyfmAfpWQXH4Zggkb3aF?usp=sharing)."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 1,
       "metadata": {
-        "id": "NMGdZXNBJ3TS",
-        "outputId": "f4d4e11a-6778-4540-bffd-4ae27e44182f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 371
-        }
+        },
+        "id": "NMGdZXNBJ3TS",
+        "outputId": "f4d4e11a-6778-4540-bffd-4ae27e44182f"
       },
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ImportError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-21-9ea135d5751b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mutils\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_testing_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mload_acrima_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdraw_conf_matrix\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mImportError\u001b[0m: cannot import name 'draw_conf_matrix' from 'utils' (/content/utils.py)",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ],
-          "errorDetails": {
-            "actions": [
-              {
-                "action": "open_url",
-                "actionText": "Open Examples",
-                "url": "/notebooks/snippets/importing_libraries.ipynb"
-              }
-            ]
-          }
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "2022-07-08 09:28:18.017201: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+            "2022-07-08 09:28:18.017230: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+          ]
         }
       ],
       "source": [
@@ -87,7 +73,7 @@
       "outputs": [],
       "source": [
         "# Load images for evaluation\n",
-        "kaggle_dir = \"drive/MyDrive/kaggle_dataset\"\n",
+        "kaggle_dir = \"drive/MyDrive/glaucoma_detection/kaggle_dataset\"\n",
         "kaggle_g_dir = os.path.join(kaggle_dir, \"glaucoma\")\n",
         "kaggle_n_dir = os.path.join(kaggle_dir, \"normal\")\n",
         "\n",
@@ -97,14 +83,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "models_dir = \"drive/MyDrive/pre-trained-models\""
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "MZ0xmxwJLDDN"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "models_dir = \"drive/MyDrive/pre_trained_models\""
+      ]
     },
     {
       "cell_type": "markdown",
@@ -119,16 +105,16 @@
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
-        "id": "btqaLMo_J3TX",
-        "outputId": "c56aace2-07c9-4c16-f11c-9ef959d3fc70",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "btqaLMo_J3TX",
+        "outputId": "c56aace2-07c9-4c16-f11c-9ef959d3fc70"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Model: \"model_1\"\n",
             "__________________________________________________________________________________________________\n",
@@ -932,16 +918,16 @@
       "cell_type": "code",
       "execution_count": 17,
       "metadata": {
-        "id": "F2aKivkOJ3TY",
-        "outputId": "80ccdc6a-65a4-44e6-b6e7-7c93cea40dce",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F2aKivkOJ3TY",
+        "outputId": "80ccdc6a-65a4-44e6-b6e7-7c93cea40dce"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "(401,)\n",
             "(401, 2)\n"
@@ -965,18 +951,23 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "65zlC3eJoHLw"
+      },
       "source": [
         "We also notice that the ACRIMA models have a double-digit prediction rather than a single-digit one, where:\n",
         "* (1, 0) means that the patient has glaucoma\n",
         "- (0, 0) means that the patient doesn't have glaucoma\n",
         "Therefore, we'll convert the values in the `y_test_pred` numpy array to single digit labels. "
-      ],
-      "metadata": {
-        "id": "65zlC3eJoHLw"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 19,
+      "metadata": {
+        "id": "iSMuIz__otSL"
+      },
+      "outputs": [],
       "source": [
         "def convert_predictions(predictions_array):\n",
         "  new_predictions = []\n",
@@ -988,50 +979,45 @@
         "  \n",
         "  new_predictions = np.array(new_predictions)\n",
         "  return new_predictions"
-      ],
-      "metadata": {
-        "id": "iSMuIz__otSL"
-      },
-      "execution_count": 19,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "y_test_pred = convert_predictions(y_test_pred)\n",
-        "y_test_pred.shape"
-      ],
+      "execution_count": 20,
       "metadata": {
-        "id": "E3AscKWGn2MH",
-        "outputId": "2167802b-29a4-4baf-8181-f444edc92151",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "E3AscKWGn2MH",
+        "outputId": "2167802b-29a4-4baf-8181-f444edc92151"
       },
-      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(401,)"
             ]
           },
+          "execution_count": 20,
           "metadata": {},
-          "execution_count": 20
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "y_test_pred = convert_predictions(y_test_pred)\n",
+        "y_test_pred.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "draw_conf_matrix(y_test, y_test_pred)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "djkm3ozFrCZl"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "draw_conf_matrix(y_test, y_test_pred)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1046,18 +1032,18 @@
       "cell_type": "code",
       "execution_count": 7,
       "metadata": {
-        "id": "Yq3g4sniJ3TZ",
-        "outputId": "21b4021d-e6f4-4eac-f39b-d00cd2af7e41",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 190
-        }
+        },
+        "id": "Yq3g4sniJ3TZ",
+        "outputId": "21b4021d-e6f4-4eac-f39b-d00cd2af7e41"
       },
       "outputs": [
         {
-          "output_type": "error",
           "ename": "TypeError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
@@ -1080,6 +1066,42 @@
       "source": [
         "y_g_pred = resnet_model.predict(X_g, batch_size=20)\n",
         "y_n_pred = resnet_model.predict(X_n, batch_size=20)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Change data type from float to int\n",
+        "y_g_pred = y_g_pred.astype(int)\n",
+        "y_n_pred = y_n_pred.astype(int)\n",
+        "\n",
+        "# Concatenate the dataframes for the accuracy analysis\n",
+        "y_test = np.hstack([y_g, y_n])\n",
+        "print(y_test.shape)\n",
+        "y_test_pred = np.vstack([y_g_pred, y_n_pred])\n",
+        "print(y_test_pred.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test_pred = convert_predictions(y_test_pred)\n",
+        "y_test_pred.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "draw_conf_matrix(y_test, y_test_pred)"
       ]
     },
     {
@@ -1115,6 +1137,42 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Change data type from float to int\n",
+        "y_g_pred = y_g_pred.astype(int)\n",
+        "y_n_pred = y_n_pred.astype(int)\n",
+        "\n",
+        "# Concatenate the dataframes for the accuracy analysis\n",
+        "y_test = np.hstack([y_g, y_n])\n",
+        "print(y_test.shape)\n",
+        "y_test_pred = np.vstack([y_g_pred, y_n_pred])\n",
+        "print(y_test_pred.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test_pred = convert_predictions(y_test_pred)\n",
+        "y_test_pred.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "draw_conf_matrix(y_test, y_test_pred)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "VdeYYRxzJ3Tc"
@@ -1144,6 +1202,42 @@
       "source": [
         "y_g_pred = resnet_model.predict(X_g, batch_size=20)\n",
         "y_n_pred = resnet_model.predict(X_n, batch_size=20)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Change data type from float to int\n",
+        "y_g_pred = y_g_pred.astype(int)\n",
+        "y_n_pred = y_n_pred.astype(int)\n",
+        "\n",
+        "# Concatenate the dataframes for the accuracy analysis\n",
+        "y_test = np.hstack([y_g, y_n])\n",
+        "print(y_test.shape)\n",
+        "y_test_pred = np.vstack([y_g_pred, y_n_pred])\n",
+        "print(y_test_pred.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test_pred = convert_predictions(y_test_pred)\n",
+        "y_test_pred.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "draw_conf_matrix(y_test, y_test_pred)"
       ]
     },
     {
@@ -1177,9 +1271,111 @@
         "y_g_pred = resnet_model.predict(X_g, batch_size=20)\n",
         "y_n_pred = resnet_model.predict(X_n, batch_size=20)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Change data type from float to int\n",
+        "y_g_pred = y_g_pred.astype(int)\n",
+        "y_n_pred = y_n_pred.astype(int)\n",
+        "\n",
+        "# Concatenate the dataframes for the accuracy analysis\n",
+        "y_test = np.hstack([y_g, y_n])\n",
+        "print(y_test.shape)\n",
+        "y_test_pred = np.vstack([y_g_pred, y_n_pred])\n",
+        "print(y_test_pred.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test_pred = convert_predictions(y_test_pred)\n",
+        "y_test_pred.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "draw_conf_matrix(y_test, y_test_pred)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### 4.6. Simple model"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "simple_model = load_acrima_model(\"simple_model\", models_dir)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_g_pred = simple_model.predict(X_g, batch_size=20)\n",
+        "y_n_pred = simple_model.predict(X_n, batch_size=20)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Change data type from float to int\n",
+        "y_g_pred = y_g_pred.astype(int)\n",
+        "y_n_pred = y_n_pred.astype(int)\n",
+        "\n",
+        "# Concatenate the dataframes for the accuracy analysis\n",
+        "y_test = np.hstack([y_g, y_n])\n",
+        "print(y_test.shape)\n",
+        "y_test_pred = np.vstack([y_g_pred, y_n_pred])\n",
+        "print(y_test_pred.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "y_test_pred = convert_predictions(y_test_pred)\n",
+        "y_test_pred.shape"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "draw_conf_matrix(y_test, y_test_pred)"
+      ]
     }
   ],
   "metadata": {
+    "colab": {
+      "name": "4-acrima-models-evaluation.ipynb",
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "Python 3.8.10 64-bit",
       "language": "python",
@@ -1202,10 +1398,6 @@
       "interpreter": {
         "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
       }
-    },
-    "colab": {
-      "name": "4-acrima-models-evaluation.ipynb",
-      "provenance": []
     }
   },
   "nbformat": 4,
